Refactor code to prepare for more general cases

--- a/project2/paper/paper.tex
+++ b/project2/paper/paper.tex
@@ -5,6 +5,7 @@
 
 \usepackage{graphicx}
 \usepackage{epstopdf}
+\usepackage{color}
 
 \graphicspath{{../images/}}
 
@@ -60,8 +61,29 @@ these fires propagate as normal, but under these conditions
 no new fires can appear spontaneously, nor can new trees grow.
 
 \begin{figure}
+  \input{../images/initial-state-q0-3}
+\end{figure}
+
+\begin{figure}
+  \input{../images/initial-state-q0-4}
+\end{figure}
+
+\begin{figure}
   \input{../images/initial-state-q0-5}
 \end{figure}
+
+\begin{figure}
+  \resizebox{1.3\textwidth}{!}{\input{../images/multi-nburning}}
+\end{figure}
+
+\begin{figure}
+  \resizebox{1.3\textwidth}{!}{\input{../images/multi-ntrees}}
+\end{figure}
+
+\begin{figure}
+  \resizebox{1.3\textwidth}{!}{\input{../images/multi-nempty}}
+\end{figure}
+
 
 % What answer was found to the research question; what did the study find? Was the tested hypothesis true?
 \section{Results}
